[package]
name = "mcrs"
version = "0.1.0"
edition = "2021"
description = "A library to interface with Minecraft"
authors = ["darcy"]
license = "GPL-3.0"
documentation = "https://docs.rs/mcrs/latest/mcrs"
repository = "https://github.com/dxrcy/mcrs"
keywords = ["minecraft", "api"]
exclude = ["target"]

[dependencies]
