[package]
name = "mcrs"
version = "0.4.3"
edition = "2021"
description = "Interface with a local Minecraft server"
authors = ["darcy"]
license = "GPL-3.0"
documentation = "https://docs.rs/mcrs/latest/mcrs"
repository = "https://github.com/dxrcy/mcrs"
keywords = ["minecraft", "api"]
exclude = ["target", "tests"]

[dependencies]

[features]
uds = []
